LMSA-9713 GA updates